--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,2 +1,9 @@
-<h1>StaticPages#home</h1>
-<p>Find me in app/views/static_pages/home.html.erb</p>
+<% provide(:title, "ホーム")%>
+    <h1>おたスケ</h1>
+    <p>ホーム</p>
+    <p>ログイン</p>
+    <p>新規登録</p>
+
+    <p>対戦相手募集</p>
+    <p>スケジュールから対戦相手検索</p>
+    <p>スケジュール管理</p>
