--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,1 +1,6 @@
 <% provide(:title, "ホーム")%>
+<div class="container">
+    <div class="home-image">
+        <%= image_tag("Home_img.jpg",alt:"Baseball Image",width: "1200px") %>
+    </div>
+</div>
