--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -1,6 +1,19 @@
+// フォント
+
+@font-face {
+    font-family: “RocknRollOne-Regular”;
+    src: url('/assets/RocknRollOne-Regular.ttf') format("truetype");
+    font-weight: normal;
+    font-style: normal;
+  }
+
+
+// 共通
+
 body{
     padding-top: 30px;
-    background-color: #fafafa;
+    background-color: #fff;
+    // overflow-x: hidden;
 }
 
 a{
@@ -10,22 +23,153 @@ a{
 
 ul {
     list-style: none;
+   
 }
 
-.container{
+.wrapper{
     width: 1200px;
     margin: 0 auto;
 }
 
+.container{
+    width: 800px;
+    margin: 0  auto;
+}
+
+// ロゴ
+
+#logo{
+    font-family: "RocknRollOne-Regular";
+    font-size: 24px;
+}
+
+// ヘッダー
+
 .nav{
     display: flex;
     justify-content: space-between;
+    :hover{
+        opacity: 0.7;
+    }
 }
 
 .menu{
     display: flex;
     justify-content: flex-end;
     li{
-        margin-left: 5px;
+        margin-left: 10px;
+    }
+    :hover{
+        opacity: 0.7;
     }
 }
+
+.tab-area{
+    border-top: 2px #444 solid;
+    border-bottom: 2px #444 solid;
+    width: 100vm;
+    margin: 0 calc(50% - 50vw) 15px;
+    height:30px;
+    line-height: 30px;
+    .tab-buttons{
+        position: relative;
+        width: 800px;
+        height: 30px;
+        margin: 0 auto;
+        .tab1{
+            position: absolute;
+            display:block;
+            width: 33.3%;
+            float:left;
+            text-align:center;
+            left: 0;
+        }
+        .tab1#lamp{
+            position: absolute;
+            width: 33.3%;
+            top: 30px;
+            height: 2px;
+            background-color: #FFB450;
+            border-width: 5px;
+            display: block;
+            left: 0;
+        }
+        .tab2{
+            position: absolute;
+            display:block;
+            width: 33.3%;
+            float:left;
+            text-align:center;
+            left: 33.3%;
+        }
+        .tab2#lamp{
+            position: absolute;
+            width: 33.3%;
+            top: 30px;
+            height: 2px;
+            background-color: #FFB450;
+            display: block;
+            left: 33.3%;
+        }
+        .tab3{
+            position: absolute;
+            display:block;
+            width: 33.3%;
+            float:left;
+            text-align:center;
+            left: 66.6%;
+        }
+        .tab3#lamp{
+            position: absolute;
+            width: 33.3%;
+            top: 30px;
+            height: 2px;
+            background-color: #FFB450;
+            display: block;
+            left: 66.6%;
+        }
+
+
+        :hover{
+            opacity: 0.7;
+        }
+
+
+      
+    }
+}
+
+
+    
+// ホーム画像
+
+.home-image{
+    width: 100vm;
+    margin: 0 calc(50% - 50vw);
+    position: relative;
+    p{
+        position: absolute;
+        color: black;
+        -ms-transform: translate(-50%,-50%);
+        -webkit-transform: translate(-50%,-50%);
+        transform: translate(-50%,-50%);
+        text-align: center;
+        white-space: nowrap;
+        margin:0;
+        padding:0;
+        top: 50%;
+        left: 50%;
+        font-weight: lighter;
+        font-size: 2em;
+
+        .title{
+            font-size: 2.5em;
+        }
+
+        span{
+            font-weight: bold;
+        }
+
+    }
+}
+
