--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,23 +15,27 @@
   </head>
   <body>
     <header>
-    <div class="wrapper">
-      <div class="container">
-       <div class="nav">
-         <%=link_to "おたスケ",root_path,id:"logo"%>
-         <%=link_to "ホーム",root_path%>
-       </div>
-          <ul class="menu">
-            <li><%=link_to "ログイン",'#'%></li>
-            <li><%=link_to "新規登録",'#'%></li>
-          </ul>
-        <ul class="tab">
-          <li><%=link_to "対戦相手募集",'#'%></li>
-          <li><%=link_to "スケジュールから対戦相手検索",'#'%></li>
-          <li><%=link_to "スケジュール管理",'#'%></li>
+      <div class="wrapper">
+        <div class="nav">
+          <%=link_to "おたスケ",root_path,id:"logo"%>
+          <%=link_to "ホーム",root_path%>
+        </div>
+        <ul class="menu">
+          <li><%=link_to "ログイン",'#'%></li>
+          <li><%=link_to "新規登録",'#'%></li>
         </ul>
+        <div class="container">
+          <div class="tab-area">
+            <div class="tab-buttons">
+              <div class="tab tab1"><%=link_to "対戦相手募集",'#'%></div>
+              <div class="tab tab2"><%=link_to "スケジュールから対戦相手検索",'#'%></div>
+              <div class="tab tab3"><%=link_to "スケジュール管理",'#'%></div>
+              <div id="lamp"></div>
+            </div>
+          </div>
+        </div>
       </div>
-      </header>
+    </header>
       <div class="container">
        <%= yield %>
       </div>
