Usersコントローラ作成

--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,8 +1,10 @@
 <% provide(:title, "ホーム")%>
     <div class="home-image">
         <%= image_tag("Home_img.jpg",alt:"Baseball Image",width: "100%") %>
-        <p><span class="title">全草野球人に贈る</span><br>
-        草野球の<span>「スケジュール」</span>調整をワンストップで<br>
-        対戦相手検索までを<span>「おたすけ」</span>するサービスです。</p>
+        <p><span class="title">草野球の対戦相手が<br>
+        スムーズに見つかる
+        </span><br>
+        草野球の<span>「スケジュール」</span>調整や対戦相手検索までを<br>
+        ワンストップで<span>「おたすけ」</span>するサービスです。</p>
     </div>
 </div>
