--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -22,7 +22,7 @@
         </div>
         <ul class="menu">
           <li><%=link_to "ログイン",'#'%></li>
-          <li><%=link_to "新規登録",'#'%></li>
+          <li><%=link_to "新規登録",signup_path%></li>
         </ul>
         <div class="container">
           <div class="tab-area">
