--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,3 +1,31 @@
 <%provide(:title, '新規登録')%>
-<h1>Users#new</h1>
-<p>Find me in app/views/users/new.html.erb</p>
+<div class="form">
+    <h2>新規登録</h2>
+    <%= form_with(model:@user,local:true) do |f|%>
+
+        <%=f.label :name,'ニックネーム'%>
+        <%=f.text_field :name%>
+        <%= render "shared/error_messages", model: @user, attribute: :name %>
+
+        <%=f.label :email,'メールアドレス'%>
+        <%=f.email_field :email%>
+        <%= render "shared/error_messages", model: @user, attribute: :email %>
+
+        <%=f.label :password,'パスワード'%>
+        <%=f.password_field :password%>
+        <%= render "shared/error_messages", model: @user, attribute: :password %>
+
+        <%=f.label :password_confirmation,'パスワード再入力'%>
+        <%=f.password_field :password_confirmation%>
+        <%= render "shared/error_messages", model: @user, attribute: :password_confirmation %>
+
+        <%=f.submit "登録する", class: "btn btn-orange" %>
+    <% end %>
+    <div class ="other">
+        <a>既に登録済みの方はログインしてください</a>
+        <%= link_to ("#") do %>
+            <div class= "btn btn-navy">ログイン</div> 
+        <% end %>
+    </div>
+</div>
+
