--- a/app/views/shared/_error_messages.html.erb
+++ b/app/views/shared/_error_messages.html.erb
@@ -1,8 +1,8 @@
 <% if @user.errors.any? %>
-    <div class="alert-danger">
+    <div class="form-alert-danger">
         <ul>
-            <%@user.errors.full_messages_for(attribute).each do |msg|%>
-             <li><%=msg%></li>
+            <% @user.errors.full_messages_for(attribute).each do |msg| %>
+             <li><%= msg %></li>
             <% end %>
         </ul>
     </div>
