--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,36 +8,13 @@
 
     <%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_pack_tag 'application', 'data-turbolinks-track': 'reload' %>
-    <!--[if lt IE 9]>
-      <script src="//cdnjs.cloudflare.com/ajax/libs/html5shiv/r29/html5.min.js">
-      </script>
-    <![endif]-->
+    <%= render 'layouts/shim'%>
   </head>
   <body>
     <header>
-      <div class="wrapper">
-        <div class="nav">
-          <%=link_to "おたスケ",root_path,id:"logo"%>
-          <%=link_to "ホーム",root_path%>
-        </div>
-        <ul class="menu">
-          <li><%=link_to "ログイン",'#'%></li>
-          <li><%=link_to "新規登録",signup_path%></li>
-        </ul>
-        <div class="tab-area">
-          <div class="tab-buttons">
-            <div class="tab tab1"><%=link_to "対戦相手募集",'#'%></div>
-            <div class="tab tab2"><%=link_to "スケジュールから対戦相手検索",'#'%></div>
-            <div class="tab tab3"><%=link_to "スケジュール管理",'#'%></div>
-            <div id="lamp"></div>
-          </div>
-          </div>
-      </div>
+      <%= render 'layouts/header' %>
     </header>
       <div class="container">
-      <% flash.each do |message_type, message| %>
-        <div class="alert alert-<%= message_type %>"><%= message %></div>
-      <% end %>
        <%= yield %>
        <%= debug(params) if Rails.env.development? %>
       </div>
