高度なログイン機能の実装

--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -338,3 +338,12 @@ input.btn{
     margin-top: 20px;
 }
 
+.login-checkbox{
+    margin-top: -15px;
+    float: left;
+    input{
+        width: 15px;
+        margin-right: -5px;
+    }
+}
+
