--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -1,4 +1,5 @@
 @import "reset.css";
+// @import 'semantic-ui';
 
 // フォント
 
@@ -76,10 +77,6 @@ a{
         color: #008CFF;
         text-align: center;
     }
-    a:hover{
-        opacity: 0.7;
-        background-color: #f3f3f3;   
-    }
 }
 
 .down-arrow:after {
@@ -105,6 +102,10 @@ a{
     transition: all .2s ease;
     margin-top: 5px;
     margin-left: -108px;
+    a:hover{
+        opacity: 0.7;
+        background-color: #f3f3f3;   
+    }
 }
 
 .dropdown:hover .dropdown-menu {
@@ -244,7 +245,7 @@ a{
 //   入力フォーム
 
 .form{
-    width: 350px;
+    width: 370px;
     margin: 0 auto;
     border: 2px black solid;
     padding: 20px;
@@ -309,9 +310,18 @@ input.btn{
     text-align: center;
     height: 40px;
     line-height: 40px;
-    width: 100%;
+    width: 326px;
     border-radius: 5px;
-    margin-bottom: 15px;
+    margin: 0 auto 15px ;
+    font-size: 1.6vmin;
+}
+
+.alert-success{
+    color: #0044A2;
+    background-color: #50AFFF;
+    li{
+        list-style: none;
+    }
 }
 
 .alert-danger{
@@ -347,3 +357,23 @@ input.btn{
     }
 }
 
+
+/* ページネーション */
+
+/*ページネーション自体のデザイン*/
+.pagination>li>a {          
+    border: none;     /*枠線をなくす*/
+    color: #696969;   /*文字の色を変える*/
+  }
+  
+  /* 表示しているページ番号のデザイン */
+  .pagination>.active>a {     
+    background: #93c9ff;     /*背景の色を変える*/
+    border-radius: 15px;     /*角を丸くする*/
+  }
+  
+  /*ホバー時のデザイン*/
+  .pagination>li>a:hover {        
+    border-radius: 15px;    /*角を丸くする*/
+  }
+  
