--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,14 +1,17 @@
 <div class="wrapper">
     <div class="nav">
-        <%=link_to "おたスケ",root_path,id:"logo"%>
-        <%=link_to "ホーム",root_path%>
+        <%= link_to "おたスケ",root_path,id:"logo" %>
+        <% if current_user && current_user.admin?  %>
+            <%= link_to "ユーザー一覧", users_path %>
+        <% end %>
+        <%= link_to "ホーム",root_path %>
     </div>
     <ul class="menu">
         <% if logged_in? %>
             <li class="dropdown">
                 <a href="#" class="down-arrow">設定</a>
                 <ul class="dropdown-menu">
-                    <li><%= link_to "プロフィール編集", '#' %></li>
+                    <li><%= link_to "プロフィール編集", edit_user_path(current_user) %></li>
                     <li><%= link_to "所属チーム検索", '#' %></li>
                     <li><%= link_to "チーム作成", '#' %></li>
                     <li><%= link_to "ログアウト", logout_path, method: :delete %></li>
