--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1,5 +1,6 @@
+// require_tree .
+// require_self
 @import "reset.css";
-// @import 'semantic-ui';
 
 // フォント
 
@@ -189,6 +190,7 @@ a{
     }
 }
 
+
 // ホーム画像
 
 .home-image{
@@ -317,16 +319,38 @@ input.btn{
 }
 
 .alert-success{
-    color: #0044A2;
-    background-color: #50AFFF;
+    color: #46B446;
+    background-color: #B9E6B9;
     li{
         list-style: none;
     }
 }
 
+.alert-info{
+    color: #0044A2;
+    background-color: #50AFFF;
+    width: 500px;
+    li{
+        list-style: none;
+    }
+}
+.alert-long{
+    line-height: 15px;
+    padding-top: 5px;
+}
+
 .alert-danger{
     color: red;
     background-color: #ffafaf;
+    li{
+        list-style: none;
+    }
+}
+
+.alert-warning{
+    color: #F0BE00;
+    background-color: #F0F087;
+    width: 500px;
     li{
         list-style: none;
     }
