--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,6 +1,9 @@
 <% provide(:title, "ホーム")%>
     <% flash.each do |message_type, message| %>
-        <div class="alert alert-<%= message_type %>"><%= message %></div>
+        <div class="alert alert-<%= message_type %>"><div class="<%= "alert-long" if message.include?('<br>') %>">
+        <p><%= message.html_safe %></p>
+        </div>
+        </div>
     <% end %>
     <div class="home-image">
         <%= image_tag("Home_img.jpg",alt:"Baseball Image",width: "100%") %>
