--- a/app/views/shared/_error_messages.html.erb
+++ b/app/views/shared/_error_messages.html.erb
@@ -1,9 +1,11 @@
-<% if @user.errors.any? %>
-    <div class="form-alert-danger">
-        <ul>
-            <% @user.errors.full_messages_for(attribute).each do |msg| %>
-             <li><%= msg %></li>
-            <% end %>
-        </ul>
+<% flash.each do |message_type, message| %>
+    <div class="alert alert-<%= message_type %>">
+    <% if message.include?('<br>')%>
+        <div class="alert-long">
+            <p><%= message.html_safe %></p>
+        </div>
+    <% else %>
+        <p><%= message %></p>
+    <% end %>
     </div>
 <% end %>
