--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,10 +1,5 @@
 <% provide(:title, "ホーム")%>
-    <% flash.each do |message_type, message| %>
-        <div class="alert alert-<%= message_type %>"><div class="<%= "alert-long" if message.include?('<br>') %>">
-        <p><%= message.html_safe %></p>
-        </div>
-        </div>
-    <% end %>
+<%= render 'shared/error_messages' %>
     <div class="home-image">
         <%= image_tag("Home_img.jpg",alt:"Baseball Image",width: "100%") %>
         <p><span class="title">草野球の対戦相手が<br>
