--- a/app/views/user_mailer/account_activation.html.erb
+++ b/app/views/user_mailer/account_activation.html.erb
@@ -1,10 +1,10 @@
-<h1>おたスケ</h1>
+<h1>おたスケ新規登録</h1>
 
 <p><%= @user.name %>様</p>
 
 <p>
 草野球スケジュール調整サービス「おたスケ」へようこそ！<br>
-新規登録を済ませるには、下記URLをクリックしてください。
+新規登録をするには、下記のリンクをクリックしてください。
 </p>
 
 <%= link_to "アカウントの有効化", edit_account_activation_url(@user.activation_token, email: @user.email) %>
