--- a/app/views/user_mailer/password_reset.html.erb
+++ b/app/views/user_mailer/password_reset.html.erb
@@ -1,5 +1,10 @@
-<h1>User#password_reset</h1>
+<h1>おたスケ パスワード再設定</h1>
+
+<p><%= @user.name %>様</p>
 
 <p>
-  <%= @greeting %>, find me in app/views/user_mailer/password_reset.html.erb
+このリンクは2時間後に無効になります。<br>
+パスワードの再設定をするには、下記リンクをクリックしてください。
 </p>
+
+<%= link_to "パスワード再設定", edit_password_reset_url(@user.reset_token,email: @user.email) %>
