--- a/app/views/user_mailer/password_reset.text.erb
+++ b/app/views/user_mailer/password_reset.text.erb
@@ -1,3 +1,6 @@
-User#password_reset
+<%= @user.name %>様
 
-<%= @greeting %>, find me in app/views/user_mailer/password_reset.text.erb
+このリンクは2時間後に無効になります。
+パスワードの再設定をするには、下記リンクをクリックしてください。
+
+<%= edit_password_reset_url(@user.reset_token, email: @user.email) %>
