--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -4,7 +4,7 @@
     <h2>新規登録</h2>
     <%= render 'form' %>
     <div class ="other">
-        <a>既に登録済みの方はログインしてください</a>
+        <p>既に登録済みの方はログインしてください</p>
         <%= link_to (login_path) do %>
             <div class= "btn btn-navy">ログイン</div> 
         <% end %>
