--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -55,9 +55,14 @@ a{
 .menu{
     display: flex;
     justify-content: flex-end;
-    li{
-        margin-left: 10px;
+    align-items: center;
+    padding-right: 20px;
+    >li{
+        margin-right: 20px;
         list-style: none;
+    }
+    >a{
+        margin-right: 20px;
     }
 }
 
@@ -72,6 +77,7 @@ a{
         line-height: 50px;
         background-color: white;
         margin-left: 0;
+        list-style: none;
     }
     li a {
         display: block;
@@ -101,8 +107,8 @@ a{
     position: absolute;
     -webkit-transition: all .2s ease;
     transition: all .2s ease;
-    margin-top: 5px;
-    margin-left: -108px;
+    top: 30px;
+    right: -15px;
     a:hover{
         opacity: 0.7;
         background-color: #f3f3f3;   
@@ -113,6 +119,7 @@ a{
     visibility: visible;
     opacity: 1;
 }
+
 
 // タブ
 
@@ -191,6 +198,7 @@ a{
 }
 
 
+
 // ホーム画像
 
 .home-image{
@@ -221,6 +229,39 @@ a{
         }
 
     }
+}
+
+// チームアイコン
+.icon{
+    border-radius: 50%;
+}
+
+// テーブルレイアウト
+table{
+    border-collapse: collapse;
+    border:1px solid #333;
+}
+table,td,th{
+    width: 400px;
+    border-collapse: collapse;
+    border-top:1px solid #333;
+    border-bottom:1px solid #333;
+    text-align: left;
+    padding: 10px;
+}
+
+.table{
+    margin:0 auto 10px auto;
+}
+
+.team{
+    margin:0 auto;
+    text-align: center;
+    width: 400px;
+}
+
+.team_image{
+    text-align: center;
 }
 
 // mixin
@@ -255,23 +296,33 @@ a{
         text-align: center;
         margin-bottom: 15px;
     }
-    input, textarea {
-        border: 1px solid #bbb;
+    input, textarea{
+        border: 1px #bbb solid;
         width: 100%;
         margin-bottom: 15px;
         border-radius: 5px;
         @include box_sizing;
+        padding: 0px 5px;
       }
-    input {
+    input{
         height: auto !important;
+    }
+    input[type="file"]{
+        border: none;
     }
     > p{
         text-align: center;
         margin-bottom: 15px;
     }
+
+    label{
+        display: block;
+    }
 }
 
+
 .btn{
+    display: inline-block;
     color: white;
     margin-top: 5px;
     height: 25px;
@@ -394,8 +445,156 @@ input.btn{
     }
 }
 
+.selectbox{
+    width: 100%;
+    position: relative;
+}
 
-/* ページネーション */
+select{
+    border-radius: 5px;
+    border: 1px #bbb solid;
+    padding: 5px;
+    width: 100%;
+    margin-bottom: 15px;
+}
+
+.selectbox:after{
+    content: "";
+    display: block;
+    width: 10px;
+    height: 10px;
+    position: absolute;
+    right: 5%;
+    top: 20%;
+    border-bottom: #333 2px solid;
+    border-right: #333 2px solid;
+    transform: rotate(45deg)translateY(-30%);
+  }
+
+.checkbox-inline{
+    label{
+        display: inline;
+        margin-right: 10px;
+        margin-left: -5px;
+    }
+    .field_with_errors{
+        display: inline;
+    }
+    input{
+        width: auto;
+    }
+
+}
+
+#preview{
+    height: 100px;
+    width: 100px;
+    border-radius: 50%;
+    object-fit:cover;
+}
+
+// チームプロフィール
+
+.team-profile{
+    align-items: center;
+    width: 450px;
+    padding: 10px;
+    margin-bottom: 10px;
+    margin: 0 auto;
+    text-align: center;
+
+}
+
+// チーム一覧表示
+
+.teams{
+    text-align: center;
+    list-style: none;
+    #search {
+        border: 1px #bbb solid;
+        margin-bottom: 15px;
+        border-radius: 5px;
+        @include box_sizing;
+        padding: 0px 5px;
+    }
+}
+
+.team{
+    position: relative;
+    align-items: center;
+    border: #333 1px solid;
+    width: 450px;
+    padding: 10px;
+    margin-bottom: 10px;
+    text-align: left;
+    img{
+        vertical-align: top;
+        margin-right: auto;
+    }   
+}
+
+.team-header{
+    display: inline-block;
+    text-align: left;
+}
+
+.team-body{
+    display: block;
+    margin-top: 5px;
+}
+
+.btn-apply{
+    position: absolute;
+    top: 50%;
+    transform: translateY(-50%);
+    display: inline-block;
+    margin-left: 85px;
+    height: 25px;
+    padding: 1px 6px;
+    font-size: 15px;
+    font-weight: bold;
+    border-radius: 5px;
+    cursor: pointer;
+    @include box_sizing;
+    >a{
+        color: white;
+    }
+}
+
+.btn-search{
+    display: inline-block;
+    margin-left: 5px;
+    height: 25px;
+    padding: 1px 6px;
+    font-size: 15px;
+    border-radius: 5px;
+    cursor: pointer;
+    color: white;
+    @include box_sizing;
+}
+
+
+
+
+// チーム切り替え
+.team-change{
+    align-items: center;
+    >span{
+        display: inline-block;
+        text-align: left;
+    }
+    img{
+        vertical-align: top;
+        margin-right: -5px;
+    }
+    .list{
+        margin-top: 10px;
+    }
+}
+
+
+
+// ページネーション
 
 .pagination{
     margin: 20px auto 0;
