--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,5 +1,5 @@
 <div class="wrapper">
-    <div class="nav">
+    <li class="nav">
         <%= link_to "おたスケ",root_path,id:"logo" %>
         <% if current_user && current_user.admin?  %>
             <%= link_to "ユーザー一覧", users_path %>
@@ -8,12 +8,32 @@
     </div>
     <ul class="menu">
         <% if logged_in? %>
+            <% if belong_team? %>
+                <% if @current_team.image.attached? %>
+                    <%= image_tag(@current_team.image,alt:"チームプロフィール画像", size: "25x25", gravity: :center, crop: "25x25+0+0", class: "icon") %>
+                <% else %>
+                    <%= image_tag("default_team_image.png",alt:"チームプロフィール画像", size: "25x25", gravity: :center, crop: "25x25+0+0", class: "icon") %>
+                <% end %>
+                <%= link_to  @current_team.name, team_path(@current_team) %> 
+            <% end %>
+            <% if current_team && current_user.id == current_team.admin_user_id %>
+                <li class="dropdown">
+                    <a href="#" class="down-arrow">管理者メニュー</a>
+                    <ul class="dropdown-menu">
+                        <li><%= link_to "試合リクエスト", "#" %></li>
+                        <li><%= link_to "所属リクエスト", "#" %></li>
+                        <li><%= link_to "チーム編集", edit_team_path(@current_team) %></li>
+                        <li><%= link_to "チーム削除", team_path(@current_team), method: :delete, data: {confirm: "チームを削除しますか？"} %></li>
+                    </ul>
+                </li>
+            <% end %>
             <li class="dropdown">
                 <a href="#" class="down-arrow">設定</a>
                 <ul class="dropdown-menu">
-                    <li><%= link_to "プロフィール編集", edit_user_path(current_user) %></li>
-                    <li><%= link_to "所属チーム検索", '#' %></li>
-                    <li><%= link_to "チーム作成", '#' %></li>
+                    <li><%= link_to "プロフィール編集", edit_user_path(@current_user) %></li>
+                    <li><%= link_to "所属チーム検索", teams_path %></li>
+                    <li><%= link_to "チーム切り替え", list_team_path(@current_user) %></li>
+                    <li><%= link_to "チーム作成", new_team_path %></li>
                     <li><%= link_to "ログアウト", logout_path, method: :delete %></li>
                 </ul>
             </li>
