--- a/app/views/shared/_form_error_messages.html.erb
+++ b/app/views/shared/_form_error_messages.html.erb
@@ -1,7 +1,7 @@
-<% if @user.errors.any? %>
+<% if object.errors.any? %>
     <div class="form-alert-danger">
         <ul>
-            <% @user.errors.full_messages_for(attribute).each do |msg| %>
+            <% object.errors.full_messages_for(attribute).each do |msg| %>
              <li><%= msg %></li>
             <% end %>
         </ul>
