--- a/app/views/teams/_team_form.html.erb
+++ b/app/views/teams/_team_form.html.erb
@@ -48,5 +48,5 @@
     <%= f.text_area :other %>
     <%= render 'shared/form_error_messages', object: f.object, attribute: :other %>
 
-    <%= f.submit yield(:button_text), class: "btn btn-orange" %>
+    <%= f.submit yield(:button_text), class: "form-btn btn-orange" %>
 <% end %>
