--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -16,5 +16,5 @@
     <%= f.password_field :password_confirmation %>
     <%= render 'shared/form_error_messages', object: f.object, attribute: :password_confirmation %>
 
-    <%= f.submit yield(:button_text), class: "btn btn-orange" %>
+    <%= f.submit yield(:button_text), class: "form-btn btn-orange" %>
 <% end %>
