--- a/app/views/teams/list.html.erb
+++ b/app/views/teams/list.html.erb
@@ -1,15 +1,15 @@
 <% provide(:title, 'チーム切り替え') %>
 <%= render 'shared/error_messages' %>
+<h2>チーム切り替え</h2>
 <div class="teams">
-    <h2>チーム切り替え</h2>
     <div class="team-change">
         <span>
             <% @current_user.team_member.each do |team_member| %>
                 <div class="list">
                     <% if team_member.team.image.attached? %>
-                        <%= image_tag(team_member.team.image, alt:"チームプロフィール画像", size: "25x25", gravity: :center, crop: "25x25+0+0", class: "icon") %>
+                        <%= image_tag(team_member.team.image,  size: "25x25", gravity: :center, crop: "25x25+0+0", class: "icon") %>
                     <% else %>
-                        <%= image_tag("default_team_image.png", alt:"チームプロフィール画像", size: "25x25", gravity: :center, crop: "25x25+0+0", class: "icon") %>
+                        <%= image_tag("default_team_image.png",  size: "25x25", gravity: :center, crop: "25x25+0+0", class: "icon") %>
                     <% end %>
                     <%= link_to team_member.team.name, switch_team_path(team_member.team), method: :post %>
                 </div>
