--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,16 +1,18 @@
 <% provide(:title, 'ユーザー一覧') %>
 <%= render 'shared/error_messages' %>
-<h1>ユーザー一覧</h1>
+<h2>ユーザー一覧</h2>
 <ul class="users">
-  <% @users.each do |user| %>
-    <li>
-      <%= user.name %>
-      <% if !current_user?(user) %>
-      | <%= link_to "削除", user, method: :delete,
-                                  data: { confirm: "本当に削除しますか？" } %> 
-      <% end %>
-    </li>
-  <% end %>
+    <% @users.each do |user| %>
+      <li class="user">
+          <%= user.name %>
+          <% if !current_user?(user) %>
+          <span class="btn-destroy btn-red">
+          <%= link_to "削除", user, method: :delete,
+                                      data: { confirm: "本当に削除しますか？" } %> 
+          </span>
+          <% end %>
+      </li>
+    <% end %>
 </ul>
 
 
