--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1,4 +1,4 @@
-// require_tree .
+// require_tree
 // require_self
 @import "reset.css";
 
@@ -44,7 +44,7 @@ h2{
 }
 
 .container{
-    width: 800px;
+    width: 1200px;
     margin: 0 auto;
 }
 
@@ -161,6 +161,13 @@ h2{
     margin: 5px calc(50% - 50vw) 15px;
     height: 34px;
     line-height: 30px;
+    .tab{
+        >a{
+            display: inline-block;
+            width: 100%;
+            height: 100%;
+        }
+    }
     .tab-buttons{
         position: relative;
         width: 800px;
@@ -168,9 +175,9 @@ h2{
         margin: 0 auto;
         .tab1{
             position: absolute;
-            display:block;
+            display: block;
             width: 33.3%;
-            float:left;
+            float: left;
             text-align:center;
             left: 0;
             cursor: pointer;
@@ -267,29 +274,6 @@ h2{
     border-radius: 50%;
 }
 
-// テーブルレイアウト
-table{
-    border-collapse: collapse;
-    border:1px solid #333;
-}
-table,td,th{
-    width: 400px;
-    border-collapse: collapse;
-    border-top:1px solid #333;
-    border-bottom:1px solid #333;
-    text-align: left;
-    padding: 10px;
-}
-
-.table{
-    margin:0 auto 10px auto;
-}
-
-.team_image{
-    text-align: center;
-}
-
-
 
   // デバック
 
@@ -336,6 +320,14 @@ table,td,th{
 
     label{
         display: block;
+    }
+
+    select{
+        border-radius: 5px;
+        border: 1px #bbb solid;
+        padding: 5px;
+        width: 100%;
+        margin-bottom: 15px;
     }
 }
 
@@ -473,14 +465,6 @@ input.form-btn{
     position: relative;
 }
 
-select{
-    border-radius: 5px;
-    border: 1px #bbb solid;
-    padding: 5px;
-    width: 100%;
-    margin-bottom: 15px;
-}
-
 .selectbox:after{
     content: "";
     display: block;
@@ -524,6 +508,31 @@ select{
     padding: 10px;
     margin-bottom: 10px;
     margin: 0 auto;
+    text-align: center;
+
+    table{
+        border-collapse: collapse;
+        border:1px solid #333;
+    }
+    table,td,th{
+        width: 400px;
+        border-collapse: collapse;
+        border-top:1px solid #333;
+        border-bottom:1px solid #333;
+        text-align: left;
+        padding: 10px;
+        a{
+            text-decoration: underline;
+            color: blue;
+        }
+    }
+    
+    .table{
+        margin:0 auto 10px auto;
+    }
+}
+
+.team_image{
     text-align: center;
 }
 
@@ -707,3 +716,202 @@ select{
     background-color: white !important;
 }
   
+// スケジュール管理ページ
+
+.events{
+    overflow-x:scroll !important;
+    table{
+        border-collapse: collapse;
+    }
+    th,td{
+        border:1px solid #333;
+        text-align: center;
+        padding: 5px;
+    }
+    td{
+        padding: 10px;
+        position: relative;
+    }
+    .fixed{
+        font-weight: normal;
+        text-align: left;
+        position: sticky;
+        left: 0;
+        z-index: 1;
+        background-color: white;
+        &:before{
+            content: "";
+            position: absolute;
+            top: -1px;
+            left: -1px;
+            width: 100%;
+            height: 100%;
+            border: 1px solid #333;
+            box-sizing: content-box;
+        }
+    }
+
+    .entry{
+        a{  
+            position: absolute;
+            display: block;
+            top: 50%;
+            left: 50%;
+            transform: translateY(-50%) translateX(-50%);
+            color: blue;
+        }
+        p{  
+            position: absolute;
+            display: block;
+            top: 50%;
+            left: 50%;
+            transform: translateY(-50%) translateX(-50%);
+        }
+    }
+
+}
+
+.event{
+    table,td{
+        margin: 0 auto;
+        border-collapse: collapse;
+        border:1px solid #333;
+        text-align: center;
+        padding: 10px;
+        position: relative;
+}
+    th{
+        border-collapse: collapse;
+        border:1px solid #333;
+        text-align: center;
+        padding: 5px;
+    }   
+}
+
+.bg-red{
+    background-color: #FF9191;
+    display: block;
+    margin: 0 auto;
+    height: 20px;
+    width: 35px;
+}
+
+.bg-yellow{
+    background-color: #F0F087;
+    display: block;
+    margin: 0 auto;
+    height: 20px;
+    width: 35px;
+}
+
+.bg-green{
+    background-color:#B9E6B9;
+    display: block;
+    margin: 0 auto;
+    height: 20px;
+    width: 35px;
+}
+
+.day-time{
+    display: flex;
+    justify-content: space-between;
+    .time{
+        margin: 0 auto;
+    }
+    select{
+        width: auto;
+    }
+
+}
+
+.btn-event{
+    display: inline-block;
+    height: 25px;
+    margin-top: 10px;
+    font-size: 15px;
+    font-weight: bold;
+    border-radius: 5px;
+    cursor: pointer;
+    @include box_sizing;
+    >a{
+        display: block;
+        color: white;
+        height: 25px;
+        padding: 1px 6px;
+        width: 100%;
+    }
+}
+
+.no-event{
+    display: table-cell;
+    font-size: x-large;
+    margin-top: 10px;
+}
+
+// ラジオボタン
+
+.radio-button-group {
+    display: flex;
+    justify-content: center;
+}
+
+.input-container{
+    position: relative;
+    height:  3rem;
+    width:  4rem;
+    margin: 0.5rem;
+}
+
+.radio_button{
+    opacity: 0;
+    position: absolute;
+    top: 0;
+    left: 0;
+    height: 100%;
+    width: 100%;
+    margin: 0;
+    cursor: pointer;
+}
+
+.radio-tile{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
+    height: 100%;
+    border: 1px solid #bbb;
+    border-radius: 5px;
+    padding: 1rem;
+    background-color: #dfdfdf;
+  }
+
+.radio_button:checked + .ok{
+    background-color: #B9E6B9;
+  }
+
+.radio_button:checked + .neither{
+    background-color: #F0F087;
+  }
+
+.radio_button:checked + .ng{
+    background-color: #FF9191;
+  }
+
+// 出欠変更ボタン
+.btn-event-edit{
+    display: block;
+    margin: 10px auto 0;
+    color: white;
+    height: 25px;
+    padding: 1px 6px;
+    font-size: 15px;
+    font-weight: bold;
+    border-radius: 5px;
+    cursor: pointer;
+    @include box_sizing;
+}
+
+
+    
+
