--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -50,7 +50,13 @@
         <div class="tab-buttons">
             <div class="tab tab1"><%= link_to "対戦相手募集",'#' %></div>
             <div class="tab tab2"><%= link_to "スケジュールから対戦相手検索",'#' %></div>
-            <div class="tab tab3"><%= link_to "スケジュール管理",'#' %></div>
+            <div class="tab tab3">
+            <% if @current_team != nil %>
+            <%= link_to "スケジュール管理", event_path(@current_team) %>
+            <% else %>
+            <%= link_to "スケジュール管理", no_event_path %>
+            <% end %>
+            </div>
             <div id="lamp"></div>
         </div>
     </div>
