スケジュールのテストを実装、コントローラーのリファクタリング

--- a/app/views/events/_event_form.html.erb
+++ b/app/views/events/_event_form.html.erb
@@ -14,11 +14,11 @@
     </span>
 </span>
 
-    <%= f.label :ground,'グラウンド' %>
+    <%= f.label :ground,'グラウンド名' %>
     <%= f.text_field :ground %>
     <%= render 'shared/form_error_messages', object: f.object, attribute: :ground %>
 
-    <%= f.label :opponent_team_name,'対戦相手' %>
+    <%= f.label :opponent_team_name,'対戦チーム名' %>
     <%= f.text_field :opponent_team_name %>
     <%= render 'shared/form_error_messages', object: f.object, attribute: :opponent_team_name %>
     
