--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -63,7 +63,14 @@ h2{
         height: 25px;
         padding: 1px 6px;
         width: 100%;
+        z-index: 1;
+        position: relative;
     }
+}
+
+.center{
+    display: block;
+    text-align: center;
 }
 
 // ロゴ
@@ -291,7 +298,7 @@ h2{
 //   入力フォーム
 
 .form{
-    width: 370px;
+    width: 390px;
     margin: 0 auto;
     border: 2px black solid;
     padding: 20px;
@@ -549,7 +556,7 @@ input.form-btn{
     border: #333 1px solid;
     width: 450px;
     padding: 10px;
-    margin: 0 auto -1px auto;
+    margin: 0 auto -1px;
     text-align: left;
 }
 
@@ -607,6 +614,9 @@ input.form-btn{
     display: inline-block;
     text-align: left;
     width: 240px;
+    >a{
+        color: blue;
+    }
 }
 
 .team-body{
@@ -678,7 +688,12 @@ input.form-btn{
         margin-right: -5px;
     }
     .list{
-        margin-top: 10px;
+        position: relative;
+        border: #333 1px solid;
+        width: auto;
+        padding: 10px;
+        margin: 0 auto -1px;
+        text-align: center;
     }
 }
 
@@ -690,7 +705,7 @@ input.form-btn{
     margin: 20px auto 0;
     width: 50%;
     display: flex;
-    justify-content: flex-start;
+    justify-content: center;
     span{
         text-align: center;
         width: 50px;
@@ -703,7 +718,7 @@ input.form-btn{
             height: 100%;
             :hover{
                 background-color: #f3f3f3;
-              }
+                }
         }
     }
 }
@@ -719,7 +734,7 @@ input.form-btn{
 // スケジュール管理ページ
 
 .events{
-    overflow-x:scroll !important;
+    overflow-x: auto !important;
     table{
         border-collapse: collapse;
     }
@@ -737,7 +752,7 @@ input.form-btn{
         text-align: left;
         position: sticky;
         left: 0;
-        z-index: 1;
+        z-index: 1; 
         background-color: white;
         &:before{
             content: "";
