--- a/app/views/event_entries/edit.html.erb
+++ b/app/views/event_entries/edit.html.erb
@@ -1,42 +1,42 @@
 <div class="event">
-<%= form_with(model:@event_entry,local:true) do |f|%>
-    <table>
-        <tr>
-            <th></th>
-            <th><%= current_user.name %> </th>
-        </tr>
-        <tr>
-            <td class="left">
-            <%= @event.day.strftime('%m/%d') %> 
-            <%= @event.time.strftime('%H:%M') %> 
-            <%= @event.ground %> 
-            <% if @event.opponent_team_name.present? %>
-                VS<%= @event.opponent_team_name %> 
-            <% end %>
-            <%= @event.tournament_name %>
-            <%= @event.other%>
-            </td>
-            <td nowrap>
-            <div class="radio-button-group">
-                <%= f.fields_for :event_option_entry do |feeling| %>
-                <div class="input-container">
-                    <%= feeling.radio_button :feeling, :OK, class: :radio_button %>
-                    <span class="radio-tile ok">◯</span>
-                </div>
-                <div class="input-container">
-                    <%= feeling.radio_button :feeling, :Neither, class: :radio_button%>
-                    <span class="radio-tile neither">△</span>
-                </div>
-                <div class="input-container">
-                    <%= feeling.radio_button :feeling, :NG, class: :radio_button %>
-                    <span class="radio-tile ng">×</span>
-                </div>
-                    <%= feeling.hidden_field :id, value: feeling.object.id %>
+    <%= form_with(model:@event_entry, local:true) do |f|%>
+        <table>
+            <tr>
+                <th></th>
+                <th><%= current_user.name %> </th>
+            </tr>
+            <tr>
+                <td>
+                <%= @event.day.strftime('%m/%d') %> 
+                <%= @event.time.strftime('%H:%M') %> 
+                <%= @event.ground %> 
+                <% if @event.opponent_team_name.present? %>
+                    VS<%= @event.opponent_team_name %> 
                 <% end %>
-            </div>
-            </td>
-        </tr>
-    </table>
+                <%= @event.tournament_name %>
+                <%= @event.other%>
+                </td>
+                <td nowrap>
+                <div class="radio-button-group">
+                    <%= f.fields_for :event_option_entry do |feeling| %>
+                    <div class="input-container">
+                        <%= feeling.radio_button :feeling, :OK, class: "radio_button" %>
+                        <%= feeling.label :feeling, "◯", class: "radio-tile ok", value: "ok" %>
+                    </div>
+                    <div class="input-container">
+                        <%= feeling.radio_button :feeling, :Neither, class: "radio_button" %>
+                        <%= feeling.label :feeling, "△", class: "radio-tile neither", value: "neither" %>
+                    </div>
+                    <div class="input-container">
+                        <%= feeling.radio_button :feeling, :NG, class: "radio_button" %>
+                        <%= feeling.label :feeling, "×", class: "radio-tile ng", value: "ng" %>
+                    </div>
+                        <%= feeling.hidden_field :id, value: feeling.object.id %>
+                    <% end %>
+                </div>
+                </td>
+            </tr>
+        </table>
+        <%= f.submit "更新する", class: "btn-event-edit btn-orange" %>
+    <% end %>
 </div>
-    <%= f.submit "更新する", class: "btn-event-edit btn-orange" %>
-<% end %>
