スケジュールから対戦相手検索機能の実装

--- a/app/views/event_entries/edit.html.erb
+++ b/app/views/event_entries/edit.html.erb
@@ -7,8 +7,7 @@
             </tr>
             <tr>
                 <td>
-                <%= @event.day.strftime('%m/%d') %> 
-                <%= @event.time.strftime('%H:%M') %> 
+                <%= @event.day_time.strftime('%m/%d%H:%M') %> 
                 <%= @event.ground %> 
                 <% if @event.opponent_team_name.present? %>
                     VS<%= @event.opponent_team_name %> 
