--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -510,13 +510,11 @@ input.form-btn{
 // チームプロフィール
 
 .team-profile{
-    align-items: center;
     width: 440px;
     padding: 10px;
     margin-bottom: 10px;
     margin: 0 auto;
     text-align: center;
-
     table{
         border-collapse: collapse;
         border:1px solid #333;
@@ -622,6 +620,9 @@ input.form-btn{
 .team-body{
     display: block;
     margin-top: 5px;
+    >a{
+        color: blue;
+    }
 }
 
 .btns{
@@ -631,7 +632,7 @@ input.form-btn{
     transform: translateY(-50%);
 }
 
-.btn-apply{
+.btn-right{
     position: absolute;
     top: 50%;
     left: 68%;
@@ -688,13 +689,18 @@ input.form-btn{
         margin-right: -5px;
     }
     .list{
-        position: relative;
         border: #333 1px solid;
         width: auto;
         padding: 10px;
         margin: 0 auto -1px;
         text-align: center;
     }
+}
+
+.no-team{
+    font-size: x-large;
+    margin: 0 auto;
+    margin-top: 10px;
 }
 
 
@@ -737,7 +743,52 @@ input.form-btn{
     overflow-x: auto !important;
     table{
         border-collapse: collapse;
+        tr:nth-child(even){
+            background-color: #efefef;
+            .fixed{
+                font-weight: normal;
+                text-align: left;
+                position: sticky;
+                left: 0;
+                z-index: 1; 
+                background-color: #efefef;
+                &:before{
+                    content: "";
+                    position: absolute;
+                    top: -1px;
+                    left: -1px;
+                    width: 100%;
+                    height: 100%;
+                    border: 1px solid #333;
+                    box-sizing: content-box;
+                }
+            } 
+        }
+        tr:nth-child(odd){
+            background-color: white;
+            .fixed{
+                font-weight: normal;
+                text-align: left;
+                position: sticky;
+                left: 0;
+                z-index: 1; 
+                background-color: white;
+                &:before{
+                    content: "";
+                    position: absolute;
+                    top: -1px;
+                    left: -1px;
+                    width: 100%;
+                    height: 100%;
+                    border: 1px solid #333;
+                    box-sizing: content-box;
+                }
+            } 
+
+        }
+          
     }
+    
     th,td{
         border:1px solid #333;
         text-align: center;
@@ -747,25 +798,6 @@ input.form-btn{
         padding: 10px;
         position: relative;
     }
-    .fixed{
-        font-weight: normal;
-        text-align: left;
-        position: sticky;
-        left: 0;
-        z-index: 1; 
-        background-color: white;
-        &:before{
-            content: "";
-            position: absolute;
-            top: -1px;
-            left: -1px;
-            width: 100%;
-            height: 100%;
-            border: 1px solid #333;
-            box-sizing: content-box;
-        }
-    }
-
     .entry{
         a{  
             position: absolute;
@@ -783,8 +815,9 @@ input.form-btn{
             transform: translateY(-50%) translateX(-50%);
         }
     }
-
 }
+
+
 
 .event{
     table,td{
@@ -827,17 +860,7 @@ input.form-btn{
     width: 35px;
 }
 
-.day-time{
-    display: flex;
-    justify-content: space-between;
-    .time{
-        margin: 0 auto;
-    }
-    select{
-        width: auto;
-    }
 
-}
 
 .btn-event{
     display: inline-block;
@@ -927,6 +950,99 @@ input.form-btn{
     @include box_sizing;
 }
 
+// スケジュールから相手チーム検索
 
+.event-search{
+    width: 450px;
+    margin: 15px auto;
+    background-color: #efefef;
+    border-radius: 10px;
+    position: relative;
+    padding:15px 75px 0px 5px;
+    label{
+        display: inline-block;
+        font-weight: bold;
+        white-space: nowrap;
+        margin: 0px 5px;
+    }
+    .search-input{
+        width: 265px;
+        text-align: center;
+        margin-left: auto;
+    }
+    .event-time{
+        width: 100%;
+        display: flex;
+        input{
+            border: 1px #bbb solid;
+            border-radius: 5px;
+            @include box_sizing;
+            padding: 0px 5px;
+            margin-bottom: 10px;
+            width: 100%;
+        }
+    }
+    .area-level{
+        .area{
+            display: flex;
+            width: 100%;
+        }
+        .level{
+            display: flex;
+            width: 100%;
+        }
+        select{
+            border-radius: 5px;
+            border: 1px #bbb solid;
+            padding: 5px;
+            width: 100%;
+            text-align: center;
+            margin-bottom: 10px;
+        }
+    }
+    .btn-event-search{
+        position: absolute;
+        top: 50%;
+        left: 86%;
+        transform: translateY(-50%);
+        display: inline-block;
+        height: 25px;
+        padding: 1px 6px;
+        display: inline-block;
+        height: 25px;
+        padding: 1px 6px;
+        font-size: 15px;
+        border-radius: 5px;
+        cursor: pointer;
+        color: white;
+        @include box_sizing;
+    }
+}
+
+
+.detail-schedules{
+    display: inline-block;
+    margin-top: 20px;
+    text-align: center;
+    position: relative;
+    >p{
+        position: absolute;
+        top: -25px;
+    }
+    table{
+        border-collapse: collapse;
+        background-color: white;
+        tr:nth-child(even){
+            background-color: #efefef;
+        }
+    }
     
-
+    th,td{
+        border:1px solid #333;
+        padding: 5px;
+    }
+    .detail-schedule{
+        font-weight: normal;
+        text-align: left;
+    }
+}
