--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -31,8 +31,8 @@
                 <a href="#" class="down-arrow">設定</a>
                 <ul class="dropdown-menu">
                     <li><%= link_to "プロフィール編集", edit_user_path(@current_user) %></li>
-                    <li><%= link_to "所属チーム検索", teams_path %></li>
                     <li><%= link_to "チーム切り替え", list_team_path(@current_user) %></li>
+                    <li><%= link_to "所属チーム検索", teams_path %></li>
                     <li><%= link_to "チーム作成", new_team_path %></li>
                     <li><%= link_to "ログアウト", logout_path, method: :delete %></li>
                 </ul>
@@ -48,8 +48,8 @@
     </ul>
     <div class="tab-area">
         <div class="tab-buttons">
-            <div class="tab tab1"><%= link_to "対戦相手募集",'#' %></div>
-            <div class="tab tab2"><%= link_to "スケジュールから対戦相手検索",'#' %></div>
+            <div class="tab tab1"><%= link_to "対戦相手募集", '#' %></div>
+            <div class="tab tab2"><%= link_to "スケジュールから対戦相手検索", search_schedule_teams_path %></div>
             <div class="tab tab3">
             <% if @current_team != nil %>
             <%= link_to "スケジュール管理", event_path(@current_team) %>
