--- a/app/views/password_resets/new.html.erb
+++ b/app/views/password_resets/new.html.erb
@@ -9,6 +9,6 @@
         <%= f.label :email, 'メールアドレス' %>
         <%= f.email_field :email %>
 
-        <%= f.submit "送信する", class: "btn btn-navy", id: "login-btn" %>
+        <%= f.submit "送信する", class: "form-btn btn-navy", id: "login-btn" %>
     <% end %>
 </div>
