--- a/app/views/team/member_requests/show.html.erb
+++ b/app/views/team/member_requests/show.html.erb
@@ -4,7 +4,7 @@
 
 <% if !@requests.present? %>
     <span class="center">
-        所属リクエストはありません
+        <span class="no-content">所属リクエストはありません</span>
     </span>
 <% else %>
     <ul class="users">
