--- a/app/views/teams/list.html.erb
+++ b/app/views/teams/list.html.erb
@@ -20,7 +20,7 @@
     </div>
 <% else %>
     <span class="center">
-        <span class="no-team">
+        <span class="no-content">
             チームに所属していません
         </span>
     </span>
