--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -8,30 +8,30 @@
     <ul class="menu">
         <% if logged_in? %>
             <% if belong_team? %>
-                <% if @current_team.image.attached? %>
-                    <%= image_tag(@current_team.image, size: "25x25", gravity: :center, crop: "25x25+0+0", class: "icon") %>
+                <% if current_team.image.attached? %>
+                    <%= image_tag(current_team.image, size: "25x25", gravity: :center, crop: "25x25+0+0", class: "icon") %>
                 <% else %>
                     <%= image_tag("default_team_image.png", size: "25x25", gravity: :center, crop: "25x25+0+0", class: "icon") %>
                 <% end %>
-                <%= link_to  @current_team.name, team_path(@current_team) %> 
+                <%= link_to  current_team.name, team_path(current_team) %> 
             <% end %>
             <% if current_team && current_user.id == current_team.admin_user_id %>
                 <li class="dropdown">
                     <a href="#" class="down-arrow">管理者メニュー</a>
                     <ul class="dropdown-menu">
-                        <li><%= link_to "試合リクエスト", "#" %></li>
-                        <li><%= link_to "所属リクエスト", team_member_request_path(@current_team) %></li>
-                        <li><%= link_to "メンバー一覧", team_team_member_path(@current_team) %></li>
-                        <li><%= link_to "チーム編集", edit_team_path(@current_team) %></li>
-                        <li><%= link_to "チーム削除", team_path(@current_team), method: :delete, data: {confirm: "チームを削除しますか？"} %></li>
+                        <li><%= link_to "試合リクエスト", game_request_path(current_team) %></li>   
+                        <li><%= link_to "所属リクエスト", team_member_request_path(current_team) %></li>
+                        <li><%= link_to "メンバー一覧", team_team_member_path(current_team) %></li>
+                        <li><%= link_to "チーム編集", edit_team_path(current_team) %></li>
+                        <li><%= link_to "チーム削除", team_path(current_team), method: :delete, data: {confirm: "チームを削除しますか？"} %></li>
                     </ul>
                 </li>
             <% end %>
             <li class="dropdown">
                 <a href="#" class="down-arrow">設定</a>
                 <ul class="dropdown-menu">
-                    <li><%= link_to "プロフィール編集", edit_user_path(@current_user) %></li>
-                    <li><%= link_to "チーム切り替え", list_team_path(@current_user) %></li>
+                    <li><%= link_to "プロフィール編集", edit_user_path(current_user) %></li>
+                    <li><%= link_to "チーム切り替え", list_team_path(current_user) %></li>
                     <li><%= link_to "所属チーム検索", teams_path %></li>
                     <li><%= link_to "チーム作成", new_team_path %></li>
                     <li><%= link_to "ログアウト", logout_path, method: :delete %></li>
@@ -48,13 +48,12 @@
     </ul>
     <div class="tab-area">
         <div class="tab-buttons">
-            <div class="tab tab1"><%= link_to "対戦相手募集", '#' %></div>
-            <div class="tab tab2"><%= link_to "スケジュールから対戦相手検索", search_schedule_teams_path %></div>
-            <div class="tab tab3">
+            <div class="tab tab1"><%= link_to "スケジュールから対戦相手検索", search_schedule_teams_path %></div>
+            <div class="tab tab2">
             <% if @current_team != nil %>
-            <%= link_to "スケジュール管理", event_path(@current_team) %>
+                <%= link_to "スケジュール管理", event_path(@current_team) %>
             <% else %>
-            <%= link_to "スケジュール管理", no_event_path %>
+                <%= link_to "スケジュール管理", no_event_path %>
             <% end %>
             </div>
             <div id="lamp"></div>
